--- a/vercel.json
+++ b/vercel.json
@@ -8,14 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/api/start",
-      "dest": "/api/start.js"
-    },
-    {
-      "src": "/out/(.*)",
-      "dest": "/api/get-file.js?file=$1"
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
     }
-  ],
-  "installCommand": "npm install",
-  "buildCommand": "echo 'Build complete'"
+  ]
 }
