--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "dependencies": {
     "@interaapps/pastefy": "^1.0.0",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "axios": "^1.6.0"
   }
 }
